--- a/gallery.html
+++ b/gallery.html
@@ -78,7 +78,11 @@
         <h3>POV:</h3>
       </div>
       <div class="pic">
+        
         <img src="gallery/Screenshot 2023-09-02 210839.png" alt="" width="240px">
+                <img src="gallery/IMG-20240630-WA0000(1).jpg" alt="" width="240px">
+                <img src="gallery/Screenshot_20250106_170457_Instagram(1).jpg" alt="" width="240px">
+            
         <h3>Last not the least</h3>
       </div>
     </div>
