--- a/gallery.html
+++ b/gallery.html
@@ -24,11 +24,11 @@
     <h2>Gallery</h2>
     <p>This is the gallery section.</p>
     <div style="display: flex;">
-      <div class=""><img src="/gallery/1.jpg" alt="i am prem" width="250px">
+      <div class=""><img src="gallery/1.jpg" alt="i am prem" width="250px">
         <h3>After last class of Finance in 2022</h3>
       </div>
 
-      <div class="pic"><img src="/gallery/2.jpg" alt="i am prem" width="250px">
+    <div class="pic"><img src="gallery/2.jpg" alt="i am prem" width="250px">
         <h3>Just a holiday</h3>
       </div>
       <div class="pic"><img src="gallery/IMG-20220519-WA0002.jpg" alt="" width="230px">
