--- a/gallery.html
+++ b/gallery.html
@@ -113,12 +113,7 @@
     <p>Contact: Phone: 000-111-2232 | Email: example@email.com</p>
   </footer>
   <script>
-    console.log(```
-It was never a big issue for me, and I never blamed you for anything. I knew you didn't have any wrong intentions. It was just a feeling, and it was never mattered to me that i made it such a big issue . I appreciate that you never took it to heart.
-
-Let's just forget what others think or do. I'm glad we had a good time together as friends. I wish you a great life ahead, and I'm sure you'll achieve everything you want. And one more last thing that you deserve better, so ignore those who make fun of your feelings and something just prove them wrong!
-
-Best wishes for your life ahead ✨```)
+    console.log("It was never a big issue for me, and I never blamed you for anything. I knew you didn't have any wrong intentions. It was just a feeling, and it was never mattered to me that i made it such a big issue . I appreciate that you never took it to heart.\nLet's just forget what others think or do. I'm glad we had a good time together as friends. I wish you a great life ahead, and I'm sure you'll achieve everything you want. And one more last thing that you deserve better, so ignore those who make fun of your feelings and something just prove them wrong!\nBest wishes for your life ahead ✨")
   </script>
 </body>
 
