--- a/gallery.html
+++ b/gallery.html
@@ -105,7 +105,13 @@
       <img src="gallery/f4.jpg" alt="" width="240px">
       <img src="gallery/f5.jpg" alt="" width="240px">
       <img src="gallery/f6.jpg" alt="" width="240px">
+  
 
+    </div>
+    <div>
+      <img src="gallery/121.jpg" >
+      <img srd="gallery/122.jpg" >
+      
     </div>
   </section>
   <footer id="contact">
