--- a/gallery.html
+++ b/gallery.html
@@ -110,7 +110,7 @@
     </div>
     <div>
       <img src="gallery/121.jpg" >
-      <img srd="gallery/122.jpg" >
+      <img src="gallery/122.jpg" >
       
     </div>
   </section>
